--- a/static-page/src/index.css
+++ b/static-page/src/index.css
@@ -1,34 +1,3 @@
-.nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav-logo {
-    width: 40px;
-}
-
-.nav-items {
-    list-style: none;
-    display: flex;
-    /* gap: 20px; */
-}
-
-.nav-items > li {
-    padding: 20px;
-}
-
-.content {
-    min-height: 80vh;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    background: rgb(46, 46, 46);
-    color: #fff;
+* {
+    font-family: 'Inter';
 }
