--- a/static-page/src/index.css
+++ b/static-page/src/index.css
@@ -11,7 +11,9 @@ body {
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    padding: 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
     background-color: #26272D;
 }
 
@@ -29,5 +31,12 @@ body {
 .nav-details {
     display: flex;
     align-items: flex-end;
+    color: #E2F3FE
+}
+
+.main {
+    margin-top: -25px;
+    height: 100vh;
+    background-color: #2C3137;
     color: #E2F3FE
 }
