--- a/airbnb-clone/src/components/Card/card.css
+++ b/airbnb-clone/src/components/Card/card.css
@@ -1,40 +1,43 @@
-.cardlist {
-    height: 600px;
-    display: flex;
-    align-items: flex-start;
-    /* background-color: pink; */
-}
+    .cardlist {
+        height: 600px;
+        display: flex;
+        flex-wrap: nowrap;
+        overflow-x: auto;
+        gap: 20px;
+    }
 
-.card {
-    display: flex;
-    flex-direction: column;
-    line-height: 0;
-    gap: -20px;
-    /* background-color: blueviolet; */
-}
+    .card {
+        width: 175px;
+        font-size: 12px;
+        flex: 0 0 auto;
+        display: flex;
+        flex-direction: column;
+        position: relative;
+    }
 
-.card--picture {
-    align-self: center;
-    border-radius: 9px;
-    margin-top: -15px;
-}
+    .card--status {
+        background-color: white;
+        color: black;
+        margin-top: 10px;
+        margin-left: 10px;
+        position: absolute;
+        border-radius: 2px;
+        width: 61px;
+        height: 20px;
+        text-align: center;
+        font-weight: 400;
+    }
 
-.card--picture--status {
-    height: 30px;
-    width: 65px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    font-size: 10px;
-    font-weight: 400;
-    position: relative;
-    top: -350px;
-    left: 10px;
-}
+    .card--image {
+        width: 100%;
+        border-radius: 9px;
+    }
 
-.card--stats {
-    margin-top: -30px;
-    display: flex;
-    align-items: center;
-}
+    .card--stats {
+        display: flex;
+        align-items: center;
+    }
+
+    .card--star {
+        height: 14px;
+    }
