--- a/meme-generator/src/components/Header/Header.css
+++ b/meme-generator/src/components/Header/Header.css
@@ -14,6 +14,10 @@ header {
     margin-left: 1vw;
 }
 
+.Header--left img {
+    height: 50px;
+}
+
 .Header--left h3 {
     font-weight: 700;
     font-size: 28px;
